plugins {
    id 'java'
}

group 'dev.carv'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = '21'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation  'ch.qos.logback:logback-classic:1.4.12',
                    'com.github.javafaker:javafaker:1.0.2'

    compileOnly 'org.projectlombok:lombok:1.18.30'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}